--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "css-treeshaking-loader",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "a webpack loader to shake unused css code.",
   "repository": {
     "type": "git",
@@ -33,5 +33,8 @@
       "stage-0"
     ],
     "plugins": []
+  },
+  "dependencies": {
+    "postcss-tree-shaking": "^1.0.0"
   }
 }
