--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "css-treeshaking-loader",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "a webpack loader to shake unused css code.",
   "repository": {
     "type": "git",
@@ -35,6 +35,7 @@
     "plugins": []
   },
   "dependencies": {
-    "postcss-tree-shaking": "^1.0.0"
+    "postcss-tree-shaking": "^1.0.0",
+    "webpack": "^3.5.2"
   }
 }
