--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-css-treeshaking-plugin",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "description": "a webpack loader to shake unused css code.",
   "repository": {
     "type": "git",
@@ -35,5 +35,6 @@
     "plugins": []
   },
   "dependencies": {
+    "lodash": "^4.17.4"
   }
 }
