--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-css-treeshaking-plugin",
-  "version": "1.1.10",
+  "version": "1.1.11",
   "description": "a webpack loader to shake unused css code.",
   "repository": {
     "type": "git",
@@ -35,6 +35,8 @@
     "plugins": []
   },
   "dependencies": {
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "postcss": "^6.0.11",
+    "postcss-selector-parser": "^2.2.3"
   }
 }
